--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <body>
 
 	<!-- Header -->
-	<h1>sam's game</h1>
+	<h1>My Game</h1>
 
 	<!-- Your website content here -->
-	<p>This is just a template for you to have something to start with.</p>
+	<p></p>
 
 </body>
 
